kube/preprod/06-frontends/back-office/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-office
  namespace: preprod
spec:
  selector:
    app: back-office
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
