kube/preprod/06-frontends/back-office/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-office-ingress
  namespace: preprod

spec:
  ingressClassName: traefik
  rules:
    - host: dev.goodfood.test
      http:
        paths:
          - path: /bo
            pathType: Prefix
            backend:
              service:
                name: back-office
                port:
                  number: 80
